Bug 7183: Mobile view : Delegated access page - Event table doesn't fit in the device Bug 7186: MBSR - when click Approved/Declined tab, user navigated to dashboard page

--- a/src/app/components/custom-govuk-table/custom-govuk-table.component.scss
+++ b/src/app/components/custom-govuk-table/custom-govuk-table.component.scss
@@ -15,10 +15,13 @@ a {
   text-decoration: underline;
 }
 
-.table-scroll {
+.table-scroll,.table-scrolls {
   overflow-x: auto;
   white-space: nowrap;
   margin-bottom: 10px;
+}
+.table-scrolls .govuk-table__header:last-child,.table-scrolls .govuk-table__cell:last-child {
+  padding-right: 1px0;
 }
 
 .pagination-area {
